- Freundschaft Entität zugefügt und SQL Testdaten ergänzt - Suche nach Nutzern anhand Email und Nachname - NotFoundExceptionMapper
Um Freunde später in der App zu finden zwei Methoden:

- anhand Email oder Nachname als QueryParam
- Wildcard-Suche anhand Nachname Prefix 

Die URIs zum aurfrufen der Methoden sind in der Resource-Klasse
kommentiert

--- a/party/src/main/resources/ApplicationMessages_de.properties
+++ b/party/src/main/resources/ApplicationMessages_de.properties
@@ -1,1 +1,3 @@
 nutzer.emailExists=Die Email-Adresse "{0}" existiert bereits.
+nutzer.notFound.nachname=Es wurd kein Nutzer mit dem Nachnamen "{0}" gefunden.
+nutzer.notFound.email=Zur Email "{0}" wurde kein Nutzer gefunden.
