Methoden eingebaut um zu einer Party alle Teilnehmer nach Teilnahme-Status auszulesen (OFFEN, ZUGESAGT, ABGESAGT)
Party anlegen ohne PartyItems und Teilnehmer funktioniert. Folgende
Validierungen werden vorgenommen:

- Veranstalter-ID muss übergeben werden
- DB wird nach Veranstalter-ID durchsucht, ob dieser auch wirklich
exisitert --> Bad Request falls nicht
- Datum in der Zukunft

Im Response Header wird die URI zur neu angelegten Party übermittelt.

Beispielhafter Request:

{
    "id":1,
    "titel":"TEST STATUS OFFEN",
    "beschreibung":"WG-Party zu Halloween",
    "datum":1446188400000,
    "uhrzeit":"20:00",
    "veranstalter":{
    "id":1}
}

--- a/party/src/main/resources/ApplicationMessages_de.properties
+++ b/party/src/main/resources/ApplicationMessages_de.properties
@@ -1,3 +1,5 @@
 nutzer.emailExists=Die Email-Adresse "{0}" existiert bereits.
+nutzer.notFound=Der Nutzer mit der ID "{0}" existiert nicht.
+party.notFound=Die gesuchte Party mit der ID "{0}" existiert nicht.
 nutzer.notFound.nachname=Es wurd kein Nutzer mit dem Nachnamen "{0}" gefunden.
 nutzer.notFound.email=Zur Email "{0}" wurde kein Nutzer gefunden.
